--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@ DOCTYPE html>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Interior Design Studio</title>
-    <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/contact.css">
-    <link rel="stylesheet" href="css/gallery.css">
-    <link rel="stylesheet" href="css/teams.css">
-    <link rel="stylesheet" href="css/testimonials.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/contact.css">
+    <link rel="stylesheet" href="./css/gallery.css">
+    <link rel="stylesheet" href="./css/teams.css">
+    <link rel="stylesheet" href="./css/testimonials.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/responsive.css">
 </head>
 
 <body>
@@ -87,7 +87,7 @@ DOCTYPE html>
     <div class="row">
         <div class="tab">
             <div class="tab-info">
-                <img src="images/k-evans.jpg" alt="Kimberly Evans" class="img-border">
+                <img src="./images/k-evans.jpg" alt="Kimberly Evans" class="img-border">
                 <h2 class="name">Kimberly Evans</h2>
             </div>
             <ul class="tab-details">
@@ -99,7 +99,7 @@ DOCTYPE html>
         </div>
         <div class="tab">
             <div class="tab-info">
-                <img src="images/t.claster.jpg" alt="Tom Claster" class="img-border">
+                <img src="./images/t.claster.jpg" alt="Tom Claster" class="img-border">
                 <h2 class="name">Tom Claster</h2>
             </div>
             <ul class="tab-details">
@@ -111,7 +111,7 @@ DOCTYPE html>
         </div>
         <div class="tab">
             <div class="tab-info">
-                <img src="images/r.osborn.jpg" alt="Rimma Osborn" class="img-border">
+                <img src="./images/r.osborn.jpg" alt="Rimma Osborn" class="img-border">
                 <h2 class="name">Rimma Osborn</h2>
             </div>
             <ul class="tab-details">
@@ -124,7 +124,7 @@ DOCTYPE html>
         </div>
         <div class="tab">
             <div class="tab-info">
-                <img src="images/m.greenwood.jpg" alt="Michael Greenwood" class="img-border">
+                <img src="./images/m.greenwood.jpg" alt="Michael Greenwood" class="img-border">
                 <h2 class="name">Michael Wood</h2>
             </div>
             <ul class="tab-details">
