--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ DOCTYPE html>
                     <p>Sapiente in incidunt quisquam doloribus possimus fugiat voluptates perferendis error deleniti odit maiores natus, iste aperiam necessitatibus saepe sunt atque eveniet culpa ullam cumque consequatur ipsum eos. Eum, porro, possimus!</p>
                 </div>
                 <div class="column-2">
-                    <img src="https://source.unsplash.com/MUZFKa_mttU/600x500" class="img-fluid img-border" alt="About us">
+                    <img src="https://images.unsplash.com/photo-1528747045269-390fe33c19f2" class="img-fluid img-border" alt="About us">
                 </div>
             </div>
         </div>
